# ocr

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml  translate_letters.py
src/book_ocr/: __init__.py  cli.py  discovery.py  llm_client.py  llm_stage.py  models.py  paddle_engine.py  segmentation.py  text_assembly.py
tests/: test_pipeline_helpers.py
