[project]
name = "book-ocr"
version = "0.1.0"
description = "Local OCR pipeline for Czech scanned book pages"
requires-python = ">=3.10,<3.13"
dependencies = [
    "paddleocr>=2.7,<4",
    "pillow>=10",
]

[project.scripts]
book-ocr = "book_ocr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8",
]
